--- a/style.css
+++ b/style.css
@@ -40,16 +40,26 @@ label {
   border: 1px solid #ffba5a;
 }
 
+.validation-message {
+  color: #ff7657;
+}
+
 #output {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+#output > div {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
 }
 
-#output > ul {
-  /* border: 1px solid #ffba5a; */
+#output div > ul {
   background: linear-gradient(180deg, #ffe3bc, #fcf9ed);
   padding: 50px;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -59,14 +69,14 @@ label {
 
 /* beer name */
 
-#output > ul > li:nth-child(2) {
+#output div > ul > li:nth-child(2) {
   font-size: 1.65rem;
   margin-top: 20px;
   color: #ff7657;
 }
 
 /* margin after ABV */
-#output > ul > li:nth-child(3) {
+#output div > ul > li:nth-child(3) {
   margin-bottom: 30px;
 }
 
@@ -76,4 +86,47 @@ label {
   margin-top: 8px;
   font-size: 0.8rem;
   line-height: 1.2rem;
+}
+
+/* /// loading spinner /// */
+
+.spinner {
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #ff7657;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
